metadata/force-app/main/default/objects/CustomName_pveNo__c/CustomName_pveNo__c.object-meta.xml
<CustomObject>
    <description>Description_rmdZp</description>
    <label>CustomLabel_mlmWh</label>
    <nameField>
        <label>CustomLabel_mlmWh</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_mlmWhs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>