metadata/force-app/main/default/objects/CustomName_pveNo__c/fields/CustomField_Ovnux__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Ovnux__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldNIrSP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>